fixng alignment, text, and "welcome"

--- a/style.css
+++ b/style.css
@@ -36,3 +36,7 @@ img{
   display: block;
   margin-inline: auto;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
